       version R650. 
     - Most mentionable is that the focus of noise estimation moved from WM to
       CSF (if possible) to avoid aging effects, where the age depended changes
       of the WM structure can be misinterpreted as noise. Although, the methods
       to avoid these regions work in most cases, some kind of noise/movement
       artifacts showed a similar pattern that lead to an underestimation of 
       noise in these cases. 
------------------------------------------------------------------------
r707 | dahnke | 2015-08-17 14:21:11

M       CHANGES.txt
M       cg_showslice_all.m
M       cg_vbm_tools.m
M       html/vbm12.html
M       vbm_surf_render.m
MM      vbm_vol_isarnlm.m

Added option to select slice orientation in cg_showslice_all.m

------------------------------------------------------------------------
r708 | gaser | 2015-08-20 11:02:15

M       CHANGES.txt
M       cg_check_cov.m
M       html/vbm12.html

Added estimation of mean squared error to cg_check_cov.m

------------------------------------------------------------------------
r709 | gaser | 2015-08-21 11:48:45

M       CHANGES.txt
M       cg_check_cov.m

Don't use masking anymore in cg_check_cov.m.

------------------------------------------------------------------------
r710 | gaser | 2015-08-21 17:33:47

M       CHANGES.txt
M       cg_vbm_batch.m
M       cg_vbm_defaults.m
M       cg_vbm_extopts.m
M       cg_vbm_run_job.m
M       cg_vbm_write.m
M       html/vbm12.html
M       vbm_tst_qa.m
M       vbm_vol_partvol.m

(1) Replaced nanstd by vbm_stat_nanstd in vbm_tst_qa.m.
(2) Updated cg_vbm_batch.m for new default parameters.
(3) Many naming changes to outputs and help texts incg_vbm_write, 
    vbm_vol_partvol, cg_vbm_run_job.
(4) Removed error message if peaks are too different in cg_vbm_write.m.

------------------------------------------------------------------------
r711 | gaser | 2015-08-25 15:58:23