@@ -7057,3 +7057,12 @@ M       vbm_vol_partvol.m
 
 ------------------------------------------------------------------------
 r711 | gaser | 2015-08-25 15:58:23
+
+M       CHANGES.txt
+M       cg_check_cov.m
+M       html/vbm12.html
+
+Added option to sort data according to mean correlation in cg_check_cov.m.
+
+------------------------------------------------------------------------
+r712 | gaser | 2015-08-27 16:09:38
